<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView

        android:id="@+id/tvEnterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_age"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEnterAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number" />


    <Button
        android:id="@+id/btnSetAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/set_age"
        android:textColor="@android:color/white" />

</LinearLayout>